# paint_flow

./: .gitignore  Cargo.toml  main.rs
graphics/: color.rs  image.rs
io/image/: loader.rs  mod.rs  png_loader.rs
utils/: iterators_util.rs  mod.rs  variadic.rs
