[package]
name = "paint_flow"
version = "0.1.0"
authors = ["accpro@inbox.ru"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.15.2"
bit-vec = "0.6"
num-traits = "0.2"

[[bin]]
name = "paint_flow"
path = "main.rs"
